--- a/Chatbot-master/chatbot/local/en/default.template
+++ b/Chatbot-master/chatbot/local/en/default.template
@@ -299,3 +299,233 @@
 {% response %}I see.  And what does that tell you?{% endresponse %}
 {% response %}How does that make you feel?{% endresponse %}
 {% response %}How do you feel when you say that?{% endresponse %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% block %}
+    {% client %}Please (.*){% endclient %}
+    {% response %}{% chat %1 %}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}What is your name{% endclient %}
+    {% response %}My name is ChatBot{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Call me (.*){% endclient %}
+    {% response %}I will remember that {name:%1}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}what is my name{% endclient %}
+    {% response %}{%if {name} %}Your name is {name}{% else %} I do not know your name, Can you please tell me your name?{% endif %}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}(I am |my name is )?(.*){% endclient %}
+    {% prev %}(.*)Can you please tell me your name{% endprev %}
+    {% response %}Thank you {name:%2}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Do you (know|remember) my name{% endclient %}
+    {% response %}{% if {name} %}Yes I do {name}{% else %}No,{% chat what is my name %}{% endif %}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I need (.*){% endclient %}
+    {% response %}Why do you need %1?{% endresponse %}
+    {% response %}Would it really help you to get %1?{% endresponse %}
+    {% response %}Are you sure you need %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Why do not you (.*){% endclient %}
+    {% response %}Do you really think I do not %1?{% endresponse %}
+    {% response %}Perhaps eventually I will %1.{% endresponse %}
+    {% response %}Do you really want me to %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}(I (am|feel) )?(feeling )?(absolutely )?(.*){% endclient %}
+    {% prev %}.*how are you{% endprev %}
+    {% response %}{% if {%low %5 %} == fine | {%low %5 %} == good | {%low %5 %} == happy %}  Nice to know that you are %5. What else? {% else %} why you feel %5 {% endif %}{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Why can not I (.*){% endclient %}
+    {% response %}Do you think you should be able to %1?{% endresponse %}
+    {% response %}If you could %1, what would you do?{% endresponse %}
+    {% response %}I do not know -- why can not you %1?{% endresponse %}
+    {% response %}Have you really tried?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I can not (.*){% endclient %}
+    {% response %}How do you know you can not %1?{% endresponse %}
+    {% response %}Perhaps you could %1 if you tried.{% endresponse %}
+    {% response %}What would it take for you to %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I am (.*){% endclient %}
+    {% response %}Did you come to me because you are %1?{% endresponse %}
+    {% response %}How long have you been %1?{% endresponse %}
+    {% response %}How do you feel about being %1?{% endresponse %}
+    {% response %}How does being %1 make you feel?{% endresponse %}
+    {% response %}Do you enjoy being %1?{% endresponse %}
+    {% response %}Why do you tell me you are %1?{% endresponse %}
+    {% response %}Why do you think you are %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Are you (.*){% endclient %}
+    {% response %}Why does it matter whether I am %1?{% endresponse %}
+    {% response %}Would you prefer it if I were not %1?{% endresponse %}
+    {% response %}Perhaps you believe I am %1.{% endresponse %}
+    {% response %}I may be %1 -- what do you think?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}What (.*){% endclient %}
+    {% response %}Why do you ask?{% endresponse %}
+    {% response %}How would an answer to that help you?{% endresponse %}
+    {% response %}What do you think?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}How (.*){% endclient %}
+    {% response %}How do you suppose?{% endresponse %}
+    {% response %}Perhaps you can answer your own question.{% endresponse %}
+    {% response %}What is it you are really asking?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Because (.*){% endclient %}
+    {% response %}Is that the real reason?{% endresponse %}
+    {% response %}What other reasons come to mind?{% endresponse %}
+    {% response %}Does that reason apply to anything else?{% endresponse %}
+    {% response %}If %1, what else must be true?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}(.*) sorry (.*){% endclient %}
+    {% response %}There are many times when no apology is needed.{% endresponse %}
+    {% response %}What feelings do you have when you apologize?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Hello(.*){% endclient %}
+    {% response %}Hello... I am glad you could drop by today.{% endresponse %}
+    {% response %}Hi there... how are you today?{% endresponse %}
+    {% response %}Hello, how are you feeling today?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I think (.*){% endclient %}
+    {% response %}Do you doubt %1?{% endresponse %}
+    {% response %}Do you really think so?{% endresponse %}
+    {% response %}But you are not sure %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}(.*) friend (.*){% endclient %}
+    {% response %}Tell me more about your friends.{% endresponse %}
+    {% response %}When you think of a friend, what comes to mind?{% endresponse %}
+    {% response %}Why do not you tell me about a childhood friend?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Yes{% endclient %}
+    {% response %}You seem quite sure.{% endresponse %}
+    {% response %}OK, but can you elaborate a bit?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}(.*) computer(.*){% endclient %}
+    {% response %}Are you really talking about me?{% endresponse %}
+    {% response %}Does it seem strange to talk to a computer?{% endresponse %}
+    {% response %}How do computers make you feel?{% endresponse %}
+    {% response %}Do you feel threatened by computers?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Is it (.*){% endclient %}
+    {% response %}Do you think it is %1?{% endresponse %}
+    {% response %}Perhaps it is %1 -- what do you think?{% endresponse %}
+    {% response %}If it were %1, what would you do?{% endresponse %}
+    {% response %}It could well be that %1.{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}It is (.*){% endclient %}
+    {% response %}You seem very certain.{% endresponse %}
+    {% response %}If I told you that it probably is not %1, what would you feel?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Can you (.*){% endclient %}
+    {% response %}What makes you think I can not %1?{% endresponse %}
+    {% response %}If I could %1, then what?{% endresponse %}
+    {% response %}Why do you ask if I can %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}Can I (.*){% endclient %}
+    {% response %}Perhaps you do not want to %1.{% endresponse %}
+    {% response %}Do you want to be able to %1?{% endresponse %}
+    {% response %}If you could %1, would you?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}You are (.*){% endclient %}
+    {% response %}Why do you think I am %1?{% endresponse %}
+    {% response %}Does it please you to think that I am %1?{% endresponse %}
+    {% response %}Perhaps you would like me to be %1.{% endresponse %}
+    {% response %}Perhaps you are really talking about yourself?{% endresponse %}
+    {% response %}Are we talking about you, or me?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I do not (.*){% endclient %}
+    {% response %}do not you really %1?{% endresponse %}
+    {% response %}Why do not you %1?{% endresponse %}
+    {% response %}Do you want to %1?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I feel (.*){% endclient %}
+    {% response %}Good, tell me more about these feelings.{% endresponse %}
+    {% response %}Do you often feel %1?{% endresponse %}
+    {% response %}When do you usually feel %1?{% endresponse %}
+    {% response %}When you feel %1, what do you do?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I have (.*){% endclient %}
+    {% response %}Why do you tell me that you have %1?{% endresponse %}
+    {% response %}Have you really %1?{% endresponse %}
+    {% response %}Now that you have %1, what will you do next?{% endresponse %}
+{% endblock %}
+
+{% block %}
+    {% client %}I would (.*){% endclient %}
+    {% response %}...
